--- a/weather/templates/base.html
+++ b/weather/templates/base.html
@@ -36,7 +36,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #d1d1d1;">
       <div class="container">
         <a class="navbar-brand " href="{% url 'home' %}">
         <img src="{% static 'logo.png' %}" height=30 width=30 class="d-inline-block alighn-top" />
