--- a/weather_info/templates/weather_info/home.html
+++ b/weather_info/templates/weather_info/home.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
 
+
+{% load crispy_forms_tags %}
+
 {% block content %}
 
 
@@ -12,9 +15,9 @@
 
   <div class="row pt-3">
 
-    <div class="col-8">
+    <div class="col-4 text-center">
 
-      {{form}}
+      {{form|crispy}}
 
     </div>
 
@@ -40,7 +43,7 @@
           <div class="col">
             <img src='http://openweathermap.org/img/w/{{ city_weather.icon }}.png' alt="Card image cap"  height="50" />
           </div>
-          
+
           <div class="card-body">
             <h4 class="card-text"> {{ city_weather.city }} </h4>
             <p class="card-text"> {{ city_weather.temperature }}° C </p>
