New feature implemented, weather forecast for five days.

--- a/weather/templates/base.html
+++ b/weather/templates/base.html
@@ -36,11 +36,14 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #d1d1d1;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5CDB95;">
       <div class="container">
         <a class="navbar-brand " href="{% url 'home' %}">
         <img src="{% static 'logo.png' %}" height=30 width=30 class="d-inline-block alighn-top" />
-        Weather
+          <p style="color: #05386B";>
+            Weather
+               Forecast
+          </p>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
