added a few photos for background

--- a/weather/templates/base.html
+++ b/weather/templates/base.html
@@ -39,11 +39,7 @@
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5CDB95;">
       <div class="container">
         <a class="navbar-brand " href="{% url 'home' %}">
-        <img src="{% static 'logo.png' %}" height=30 width=30 class="d-inline-block alighn-top" />
-          <p style="color: #05386B";>
-            Weather
-               Forecast
-          </p>
+        <img src="{% static 'wet-cleaning.png' %}" height=30 width=30 class="d-inline-block alighn-top" /><p style="color: #ffffff";> Weather Forecast</p>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -91,7 +87,7 @@
 
     <footer class="text-muted">
       <div class="container text-center">
-        <p>Copyright © Zvonimir Vlah {% now "Y" %}</p>
+        <p>Copyright © Weather Forecast {% now "Y" %}</p>
       </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
