--- a/weather_info/templates/weather_info/detail.html
+++ b/weather_info/templates/weather_info/detail.html
@@ -24,10 +24,9 @@
 
     <tbody>
       <tr>
-        <th scope="row"><img src='http://openweathermap.org/img/w/{{hour.icon}}.png' alt="Card image cap"  height="50" /></th>
+        <th scope="row">{{hour.hour}}<img src='http://openweathermap.org/img/w/{{hour.icon}}.png' alt="Card image cap"  height="50" /></th>
         <td>{{hour.description}}</td>
-        <td>{{hour.hour}}</td>
-        <td>{{hour.temperature}} °C</td>
+        <td><p>{{hour.temperature}} °C</p></td>
       </tr>
     </tbody>
 
