--- a/weather/templates/base.html
+++ b/weather/templates/base.html
@@ -78,6 +78,13 @@
     <div class="container">
 
 
+      {% if messages%}
+        {% for message in messages %}
+          <div class="alert alert-{{message.tags}}">
+            {{message}}
+          </div>
+        {% endfor %}
+      {% endif %}
 
       {% block content %}
       {% endblock %}
