toggler color changed to white

--- a/users/templates/users/logout.html
+++ b/users/templates/users/logout.html
@@ -1,1 +1,13 @@
-<h1>logout</h1>
+{% extends 'base.html' %}
+
+{% block content %}
+
+<h1>You have been loged out</h1>
+<div class="border-top pt-3">
+  <small class="text-muted">
+    <a class="ml-2" href="{% url 'login' %}">Log in agin? </a>
+  </small>
+</div>
+
+
+{% endblock content %}
