--- a/weather/templates/base.html
+++ b/weather/templates/base.html
@@ -36,7 +36,7 @@
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #5CDB95;">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #5CDB95;">
       <div class="container">
         <a class="navbar-brand " href="{% url 'home' %}">
         <img src="{% static 'wet-cleaning.png' %}" height=30 width=30 class="d-inline-block alighn-top" /><p style="color: #ffffff";> Weather Forecast</p>
@@ -51,20 +51,20 @@
             {% if user.is_authenticated %}
             <li class="nav-item">
               <a class="nav-link" href="#"><span class="oi oi-plus"></span></a>
-              <!--  <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}">Log out</a> -->
+              <a class="nav-link" href="javascript:{document.getElementById('logout').submit()}"><p style="color: #ffffff";> Log out</p></a>
                 <!-- If user clicks on the nav item to logout then run the form and submit it -->
             </li>
               <!-- hidden form for user to logout -->
-            <form id="logout" method="POST" action= "#">
+            <form id="logout" method="POST" action= "{% url 'logout' %}">
               {% csrf_token %}
               <input type="hidden" />
             </form>
             {% else %}
             <li class="nav-item">
-              <a class="nav-link" href="#">Sign up</a>
+              <a class="nav-link" href="{% url 'register' %}"><p style="color: #ffffff";> Sign up</p></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Log in</a>
+              <a class="nav-link" href="{% url 'login' %}"><p style="color: #ffffff";> Log in</p></a>
             </li>
           </ul>
 
