changed the size and layout of login/signup page

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -5,21 +5,25 @@
 
 {% block content %}
 
-<div class="content-section" >
-  <form method="POST">
-    {% csrf_token %}
-    <fieldset class="form-group">
-      <legend class="border-bottom mb-4">login</legend>
-      {{ form|crispy }}
-    </fieldset>
-    <div class="form-group">
-      <button class="btn btn-outline-info" type="submit">Log in</button>
+<div class="row justify-content-center">
+
+  <div class="content-section" >
+
+    <form method="POST">
+      {% csrf_token %}
+      <fieldset class="form-group">
+        <legend class="border-bottom mb-4">Login</legend>
+        {{ form|crispy }}
+      </fieldset>
+      <div class="form-group">
+        <button class="btn btn-outline-info" type="submit">Log in</button>
+      </div>
+    </form>
+    <div class="border-top pt-3">
+      <small class="text-muted">
+        Need an account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
+      </small>
     </div>
-  </form>
-  <div class="border-top pt-3">
-    <small class="text-muted">
-      Need an account? <a class="ml-2" href="{% url 'register' %}">Sign Up Now</a>
-    </small>
 
   </div>
 
@@ -27,7 +31,4 @@
 
 
 
-
 {% endblock %}
-
-<h1>login</h1>
