--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -5,25 +5,29 @@
 
 {% block content %}
 
-<div class="content-section" >
-  <form method="POST">
-    {% csrf_token %}
-    <fieldset class="form-group">
-      <legend class="border-bottom mb-4">Join</legend>
-      {{ form|crispy }}
-    </fieldset>
-    <div class="form-group">
-      <button class="btn btn-outline-info" type="submit">Sign Up</button>
+<div class="row justify-content-center">
+  <div class="content-section" >
+    <form method="POST">
+      {% csrf_token %}
+      <fieldset class="form-group">
+        <legend class="border-bottom mb-4">Join</legend>
+        {{ form|crispy }}
+      </fieldset>
+      <div class="form-group">
+        <button class="btn btn-outline-info" type="submit">Sign Up</button>
+      </div>
+    </form>
+    <div class="border-top pt-3">
+      <small class="text-muted">
+        Already have an account? <a class="ml-2" href="{% url 'login' %}">Log In</a>
+      </small>
+
     </div>
-  </form>
-  <div class="border-top pt-3">
-    <small class="text-muted">
-      Already have an account? <a class="ml-2" href="{% url 'login' %}">Log In</a>
-    </small>
 
   </div>
-
 </div>
+
+
 
 
 
