Reinstalled dependencies cachetools and crispyforms

--- a/weather_info/templates/weather_info/home.html
+++ b/weather_info/templates/weather_info/home.html
@@ -60,6 +60,10 @@
 
         </div>
       </div>
+      {% empty %}
+      <div class="container-fluid text-center">
+        <h7>You have no cities to display, add your city.</h7>
+      </div>
 
       {% endfor %}
     </div>
